# NicFerenckoProgrammingPortfolio

./: .gitignore  README.md
BlackJack/src/: Actions.java  BlackJackHand.java  Card.java  DeckOfCards.java
Probability Simulator/: .project
Probability Simulator/src/: BlackJackHand.java  Card.java  CardMenu.java  CardSimulations.java  DeckOfCards.java  DiceMenu.java  MainMenu.java  MarbleMenu.java  PokerHand.java  ProjectDescription.txt
a01-exponentialgrowth-nferencko/: Makefile  README.md
a01-exponentialgrowth-nferencko/src/: main  main.cpp
a05-inbetween-nferencko/: CMakeLists.txt  Makefile  README.md
a05-inbetween-nferencko/.devcontainer/: Dockerfile  devcontainer.json
a05-inbetween-nferencko/include/: AIConservativeInBetweenPlayer.h  Bank.h  Card.h  Deck.h  Hand.h  HumanInBetweenPlayer.h  InBetweenGamePlay.h  InBetweenHand.h  InBetweenPlayer.h  SampleClass.h
a05-inbetween-nferencko/src/: AIConservativeInBetweenPlayer.cpp  Bank.cpp  Card.cpp  Deck.cpp  Hand.cpp  HumanInBetweenPlayer.cpp  InBetweenGamePlay.cpp  InBetweenHand.cpp  InBetweenPlayer.cpp  SampleClass.cpp  main.cpp
a05-inbetween-nferencko/test/: AIConservativeInBetweenPlayerTests.cpp  BankTests.cpp  CMakeLists.txt  CardTests.cpp  DeckTests.cpp  InBetweenHandTests.cpp  InBetweenPlayerTests.cpp  SampleClassTests.cpp
